# EnvSage-RL

./: .gitignore  README.md  pyproject.toml
envsage/: manage.py  run_env_llm.py
envsage/agent/: admin.py  llm.py  llm_scientist_agent.py  models.py
envsage/agent/migrations/: 0001_initial.py  0002_experiment_status.py  0003_episode_triggered_by_experiment_and_more.py  0004_rename_target_questions_json_experiment_target_question_and_more.py  0005_experiment_custom_action_python_oneline_method.py  0006_alter_experiment_unique_together.py
envsage/envsage/: asgi.py  settings.py  wsgi.py
src/: main.py
src/agent/: sage_agent.py
