[project]
name = "EnvSage-RL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.13.0",
    "deepagents>=0.4.11",
    "django>=6.0.3",
    "fastapi[standard]>=0.135.1",
    "gymnasium[atari,box2d,classic-control]>=1.2.3",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.14",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "setuptools==81.0.0",
    "sqladmin>=0.23.0",
    "stable-baselines3>=2.7.1",
    "swig>=4.4.1",
    "tensorboard==2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.0",
    "wheel>=0.46.3",
]
